[REFACTOR]: Generalização de nós.