@@ -2,9 +2,10 @@ package org.gfinnovation.dealsafe._shared.modules.infrastructure.mapper;
 
 import org.gfinnovation.dealsafe._shared.modules.domain.GenericEntity;
 import org.gfinnovation.dealsafe._shared.modules.infrastructure.GenericSchema;
-import org.mapstruct.Mapping;
 
 import java.util.List;
+
+import static java.util.stream.Collectors.toList;
 
 /**
  * @author Lucas Batista Pereira
@@ -15,20 +16,23 @@ import java.util.List;
 
 public interface GenericBusinessMapper<E extends GenericEntity, S extends GenericSchema> {
     E toEntity(S schema);
-
-    @Mapping(target = "createdAt", ignore = true)
-    @Mapping(target = "updatedAt", ignore = true)
-    @Mapping(target = "deleted", ignore = true)
-    @Mapping(target = "deletedAt", ignore = true)
-    @Mapping(target = "user_id", ignore = true)
-    @Mapping(target = "company_id", ignore = true)
     S toSchema(E entity);
 
     default List<E> toEntityList(List<S> schemaList) {
-        return schemaList.stream().map(this::toEntity).toList();
+        if (schemaList == null) {
+            return null;
+        }
+        return schemaList.stream()
+                .map(this::toEntity)
+                .collect(toList());
     }
 
     default List<S> toSchemaList(List<E> entityList) {
-        return entityList.stream().map(this::toSchema).toList();
+        if (entityList == null) {
+            return null;
+        }
+        return entityList.stream()
+                .map(this::toSchema)
+                .collect(toList());
     }
 }
